# mpd-downloader

./: .gitignore  justfile  pyproject.toml  run_worker.py  run_workflow.py
activities/: concatenate_segments.py  decrypt_representation.py  download_segment.py  extract_representations.py  extract_segments.py  get_clearkey.py  list_videos.py  merge_representations.py  stitch_segments.py
docs/: deployment.md  todo.md
errors/: http_client_error.py  standard_retry_policy.py
images/: worker.Dockerfile
infra/: .terraform.lock.hcl  main.tf  variables.tf
infra/modules/authentication/: main.tf
infra/modules/central_server/: data.tf  outputs.tf  roles.tf  security_groups.tf  service_discovery.tf  services.tf  variables.tf
infra/modules/clusters/: outputs.tf  temporal.tf
infra/modules/databases/: credentials.tf  db_credentials.tf  outputs.tf  security_groups.tf  temporal.tf
infra/modules/images/: docker_hub_pull_through_cache.tf  main.tf  outputs.tf  variables.tf  worker_ecr_repository.tf
infra/modules/network/: allowed_traffic.tf  outputs.tf  service_discovery.tf  vpc.tf
infra/modules/roles/: data.tf  main.tf  outputs.tf  task_execution_role.tf  task_roles.tf  variables.tf
infra/modules/storage/: data.tf  mpds_bucket.tf  outputs.tf  permissions.tf  (+3 more)
queues/: mapping.py  task_queue.py  worker_config.py
schemas/: storage.py  video.py
settings/: worker_settings.py
storage/: get_storage.py  get_storage_bucket.py  local.py  protocols.py  s3.py  storage_bucket_name.py
workflows/: download_representation.py  download_video.py  download_videos.py  hello.py
(+12 files in other folders)
