[project]
name = "jff-downloader"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = [
    "av>=17.0.1",
    "mpd-parser>=0.2.0",
    "pydantic>=2.13.4",
    "requests>=2.33.1",
    "structlog>=25.5.0",
    "temporalio>=1.27.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]
